[gd_scene load_steps=33 format=3 uid="uid://nv5mermgrq3l"]

[ext_resource type="Script" uid="uid://c4iuhweweepnw" path="res://scripts/boss_1.1.gd" id="1_2drpx"]
[ext_resource type="Texture2D" uid="uid://2pocugodry1g" path="res://art/caracters/without_outline/ATTACK.png" id="1_13yx7"]
[ext_resource type="Texture2D" uid="uid://d12qff7p4nth6" path="res://art/caracters/without_outline/DEATH.png" id="2_2drpx"]
[ext_resource type="Texture2D" uid="uid://bq3r7s7ohq17r" path="res://art/caracters/without_outline/HURT.png" id="3_igi8r"]
[ext_resource type="Texture2D" uid="uid://63ma6u3o6q88" path="res://art/caracters/without_outline/FLYING.png" id="4_vdri6"]
[ext_resource type="FontFile" uid="uid://b5nn81mswi1cg" path="res://art/fonts/PixeloidSans-Bold.ttf" id="6_igi8r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pcpo5"]
radius = 17.0294

[sub_resource type="AtlasTexture" id="AtlasTexture_kvofc"]
atlas = ExtResource("1_13yx7")
region = Rect2(0, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef0k6"]
atlas = ExtResource("1_13yx7")
region = Rect2(79, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry61v"]
atlas = ExtResource("1_13yx7")
region = Rect2(158, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_kles1"]
atlas = ExtResource("1_13yx7")
region = Rect2(237, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_etj48"]
atlas = ExtResource("1_13yx7")
region = Rect2(316, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3lj5"]
atlas = ExtResource("1_13yx7")
region = Rect2(395, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s1j2"]
atlas = ExtResource("1_13yx7")
region = Rect2(474, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_km2bi"]
atlas = ExtResource("1_13yx7")
region = Rect2(553, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0duv"]
atlas = ExtResource("2_2drpx")
region = Rect2(0, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc4na"]
atlas = ExtResource("2_2drpx")
region = Rect2(79, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_8arul"]
atlas = ExtResource("2_2drpx")
region = Rect2(158, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d2wm"]
atlas = ExtResource("2_2drpx")
region = Rect2(237, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrd6h"]
atlas = ExtResource("2_2drpx")
region = Rect2(316, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g8a4"]
atlas = ExtResource("2_2drpx")
region = Rect2(395, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8fku"]
atlas = ExtResource("3_igi8r")
region = Rect2(0, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_jruke"]
atlas = ExtResource("3_igi8r")
region = Rect2(79, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysc7m"]
atlas = ExtResource("3_igi8r")
region = Rect2(158, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ke2s"]
atlas = ExtResource("3_igi8r")
region = Rect2(237, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_skx2t"]
atlas = ExtResource("4_vdri6")
region = Rect2(0, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnbgr"]
atlas = ExtResource("4_vdri6")
region = Rect2(79, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1i15"]
atlas = ExtResource("4_vdri6")
region = Rect2(158, 0, 79, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_we8h1"]
atlas = ExtResource("4_vdri6")
region = Rect2(237, 0, 79, 69)

[sub_resource type="SpriteFrames" id="SpriteFrames_f782l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef0k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry61v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kles1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etj48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3lj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s1j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km2bi")
}],
"loop": true,
"name": &"atack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0duv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc4na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8arul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d2wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrd6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g8a4")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8fku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jruke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysc7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ke2s")
}],
"loop": false,
"name": &"hurth",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skx2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnbgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1i15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we8h1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igi8r"]
size = Vector2(508.875, 373.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_klo04"]
radius = 37.0

[node name="boss1" type="CharacterBody2D"]
script = ExtResource("1_2drpx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10, 9)
shape = SubResource("CircleShape2D_pcpo5")

[node name="estilo" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f782l")
animation = &"hurth"
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-10, 3)
shape = SubResource("RectangleShape2D_igi8r")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(-10, -1)
shape = SubResource("CircleShape2D_klo04")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 1.484

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.984314, 0, 0.0235294, 1)
offset_left = -31.0
offset_top = 23.0
offset_right = 259.0
offset_bottom = 73.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.99558, 0.99558, 0.99558, 1)
max_value = 200.0
show_percentage = false

[node name="healthbar_label" type="Label" parent="healthbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_igi8r")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Marker2D" type="Marker2D" parent="."]

[node name="fireball_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="animation_finished" from="estilo" to="." method="_on_estilo_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="fireball_timer" to="." method="_on_fireball_timer_timeout"]
